shifted from java